add proper no row text for data tables

--- a/projects/kbtv-client/src/app/feature-modules/data-management/data-manager/data-manager.component.html
+++ b/projects/kbtv-client/src/app/feature-modules/data-management/data-manager/data-manager.component.html
@@ -15,8 +15,7 @@
 
   <lib-model-data-table #dataTable class="h-100" 
     [modelProperty]="vm.selectedProperty" 
-    agGridTheme="ag-theme-balham" 
-    overlayNoRowsTemplate="Tomt">
+    agGridTheme="ag-theme-balham">
   </lib-model-data-table>
 
   <app-bottom-action-bar bottombar [actions]="vm.bottomActions">
