remove image error reloader & replace with placeholder

--- a/projects/kbtv-client/src/app/feature-modules/mission-modules/mission-image-list/mission-image-list/mission-image-list.component.html
+++ b/projects/kbtv-client/src/app/feature-modules/mission-modules/mission-image-list/mission-image-list/mission-image-list.component.html
@@ -7,8 +7,8 @@
 
         <app-selectable-card *ngFor="let img of vm.images;trackBy: trackByImg"
             class="image" [id]="img.id" selectedText="Bilde valgt">
-            <img appImageErrorReloader (tap)="openImageViewer(img, vm.images)" alt="oppdragsbilde"
-                [src]="img | appFileUrl: FileFolder.MissionImageThumbnail"/> 
+            <img appImageErrorPlaceholder [src]="img | appFileUrl: FileFolder.MissionImageThumbnail" alt="oppdragsbilde"
+                (tap)="openImageViewer(img, vm.images)" /> 
         </app-selectable-card>  
 
     </div>
