refactor loading & add optimistic loading count

--- a/projects/kbtv-client/src/app/feature-modules/login-prompt/login-prompt/login-form/login-form.component.html
+++ b/projects/kbtv-client/src/app/feature-modules/login-prompt/login-prompt/login-form/login-form.component.html
@@ -14,7 +14,7 @@
       autocomplete="current-password" [type]="hidePassword ? 'password' : 'text'" />
   </mat-form-field>
 
-  <button appHttpCommandButton mat-raised-button color="accent" [disabled]="!authForm.valid" type="submit">
+  <button mat-raised-button color="accent" [disabled]="!authForm.valid" type="submit">
     <mat-icon>lock_open</mat-icon>
     Logg inn
   </button>
