--- a/projects/kbtv-client/src/app/feature-modules/login/login-form/login-form.component.html
+++ b/projects/kbtv-client/src/app/feature-modules/login/login-form/login-form.component.html
@@ -1,5 +1,4 @@
-<form [formGroup]="authForm" (ngSubmit)="submitForm()" fxLayout="column" >
-  <span class="mat-subheading-2 mb-2">Logg inn</span>
+<form [formGroup]="authForm" (ngSubmit)="submitForm()" fxLayout="column" class="pr-4 pl-4 pt-4">
 
   <mat-form-field color="accent">
     <mat-icon matSuffix color="accent">person</mat-icon>
@@ -14,7 +13,7 @@
       autocomplete="current-password" [type]="hidePassword ? 'password' : 'text'" />
   </mat-form-field>
 
-  <button mat-raised-button color="accent" [disabled]="!authForm.valid" type="submit">
+  <button mat-raised-button color="accent" [disabled]="!authForm.valid" type="submit" style="height:50px">
     <mat-icon>lock_open</mat-icon>
     Logg inn
   </button>
