fix login form add app button

--- a/projects/kbtv-client/src/app/feature-modules/login/login-form/login-form.component.html
+++ b/projects/kbtv-client/src/app/feature-modules/login/login-form/login-form.component.html
@@ -1,3 +1,4 @@
+<style>.form-button{ height:45px; margin-bottom: 12px; }</style>
 <form [formGroup]="authForm" (ngSubmit)="submitForm()" fxLayout="column" class="pr-4 pl-4 pt-4">
 
   <mat-form-field color="accent">
@@ -13,13 +14,12 @@
       autocomplete="current-password" [type]="hidePassword ? 'password' : 'text'" />
   </mat-form-field>
 
-  <button mat-raised-button color="accent" [disabled]="disabled || !authForm.valid" type="submit" style="height:50px">
+  <button mat-raised-button color="accent" [disabled]="disabled || !authForm.valid" type="submit" class="form-button">
     <mat-icon>lock_open</mat-icon>
     Logg inn
   </button>
-  <br />
 
-  <button mat-raised-button appAddToHomeScreen color="accent">
+  <button mat-raised-button appAddToHomeScreen color="accent" class="form-button">
     <mat-icon>get_app</mat-icon> Legg til app
   </button>
   
