use css vars for better consistency on bottom bar height for ios

--- a/projects/kbtv-client/src/app/home/home-bottom-bar/home-bottom-bar.component.html
+++ b/projects/kbtv-client/src/app/home/home-bottom-bar/home-bottom-bar.component.html
@@ -1,5 +1,5 @@
 <style>
-  mat-toolbar{ padding: 8px }
+  mat-toolbar{ padding: 8px; height: var(--bottom-nav-height)!important; padding-bottom:var(--bottom-nav-padding)!important;}
 
   .menu-btn { display: none }
 
