--- a/projects/kbtv-client/src/app/feature-modules/mission-modules/mission-list/header-layout-skeleton/header-layout-skeleton.component.scss
+++ b/projects/kbtv-client/src/app/feature-modules/mission-modules/mission-list/header-layout-skeleton/header-layout-skeleton.component.scss
@@ -48,7 +48,7 @@
         background:white;
         display:block;
         width:100%;   
-        padding-bottom: 88px;
+        padding-bottom: calc(var(--bottom-nav-height) + 32px);
         position: relative;
         z-index: 2;
         transform: translateY(-20px);
