--- a/projects/kbtv-client/src/styles/custom-theme.scss
+++ b/projects/kbtv-client/src/styles/custom-theme.scss
@@ -33,11 +33,10 @@
 @include mat-chips-theme($kbtv-client-theme); // d
 @include mat-slider-theme($kbtv-client-theme); // d
 
-
 .cdk-virtual-scroll-content-wrapper{
   width:100%;
   padding-top:8px;
-  padding-bottom: 88px;
+  padding-bottom: calc(var(--bottom-nav-height) + 32px);
 }
 
 // //Fix for bug on iOs
