add accent bg incase no img load

--- a/projects/kbtv-client/src/app/feature-modules/login/login/login.component.scss
+++ b/projects/kbtv-client/src/app/feature-modules/login/login/login.component.scss
@@ -1,5 +1,8 @@
+@import '../../../../styles/variables';
+
 .image-container{
     background-image: url("/assets/login.jpg?");
+    background-color: $accent;
     height:100%;  
     background-size: cover;
     background-repeat: no-repeat; 
