--- a/projects/kbtv-client/src/app/feature-modules/timesheet-modules/shared-timesheet/components/timesheet-card/timesheet-card.component.html
+++ b/projects/kbtv-client/src/app/feature-modules/timesheet-modules/shared-timesheet/components/timesheet-card/timesheet-card.component.html
@@ -1,26 +1,42 @@
-<div fxLayout="row" fxLayoutAlign="space-between stretch" class="p-4" *ngIf="timesheet">
+<div fxLayout="column" fxLayoutAlign="start stretch" *ngIf="timesheet" class="timesheet-card-container">
 
-    <div>
-      <div *ngIf="timesheet.fullName"> 
+    <span class="mat-title card-title">
+      Timeregistrering 
+      <span [ngClass]="timesheet.status === Status.Confirmed ? 'color-accent' : 'color-warn'">
+        {{ timesheet.status === Status.Confirmed ? 'Låst' : 'Åpen'}}
+      </span>
+    </span>
+
+    <ng-container *ngIf="timesheet.fullName">
+      <app-list-item>
+        <mat-icon left-side class="pl-2 pr-2">person</mat-icon>
         {{ timesheet.fullName }} 
-      </div>
-      <div class="mat-body-2 p-0">
-        {{ timesheet.startTime | date : 'longDate'}}
+      </app-list-item>
+      
+      <mat-divider inset=true></mat-divider>
+    </ng-container>
+
+    <app-list-item>
+      <mat-icon left-side class="pl-2 pr-2">watch_later</mat-icon>
+        {{ timesheet.startTime | date : 'dd.MMM yyyy' }}
         {{ timesheet.startTime | date : 'shortTime' }} - {{ timesheet.endTime | date : 'shortTime' }}
-      </div>
-      <div class="mat-body">
-        {{ (timesheet.totalHours || 0) | readableDuration }} 
-      </div>
-      <div class="mat-body-2">
-        ({{timesheet.missionId}}) {{ timesheet.mission?.address }}
-      </div>
-      <div class="mat-body">
-        {{ timesheet.comment }}
-      </div>
+        <br /> <span class="mat-body">{{ (timesheet.totalHours || 0) | readableDuration }} </span> 
+    </app-list-item>
+    <mat-divider inset=true></mat-divider>
 
-    </div>
+    <app-list-item>
+      <mat-icon left-side class="pl-2 pr-2">home</mat-icon>
+      ({{timesheet.missionId}}) {{ timesheet.mission?.address }}
+    </app-list-item>
+    <mat-divider inset=true></mat-divider>
 
-    <span fxLayout="column" fxLayoutAlign="space-between center" style="min-width:40px">
+    <app-list-item>
+      <mat-icon left-side class="pl-2 pr-2">comment</mat-icon>
+      {{ timesheet.comment }} 
+    </app-list-item>
+
+
+    <!-- <span fxLayout="column" fxLayoutAlign="space-between center" style="min-width:40px">
 
       <span *ngIf="timesheet.status === 1 else closedIcon" 
         fxLayout="column" fxLayoutAlign="start center" class="color-warn">
@@ -35,6 +51,6 @@
         <mat-icon>lock</mat-icon>
         <span class="mat-caption">låst</span>
       </span>
-    </ng-template>
+    </ng-template> -->
 
 </div>
