prevent layout shift & add margin to not found text

--- a/projects/kbtv-client/src/app/home/home-mission-card/home-mission-card.component.html
+++ b/projects/kbtv-client/src/app/home/home-mission-card/home-mission-card.component.html
@@ -1,4 +1,4 @@
-<div class="mat-elevation-z1  mission-card">
+<div class="mat-elevation-z1  mission-card" fxFlex>
 
     <span class="mat-body-2 m-3">
       Sist besøkte oppdrag    
@@ -17,7 +17,7 @@
     </div>
 
     <ng-template #noContent>
-      <div class="mt-2">Finner ingen oppdrag</div>
+      <div class="m-4">Finner ingen oppdrag</div>
     </ng-template>
 
 </div>
