use stroked button for add to app

--- a/projects/kbtv-client/src/app/home/home-header/home-header.component.html
+++ b/projects/kbtv-client/src/app/home/home-header/home-header.component.html
@@ -4,8 +4,7 @@
         background: linear-gradient(to top, #006064, #314755)!important;
         background:transparent;
         color:white;
-        height: 180px;
-       
+        height: 180px; 
     }
     mat-toolbar-row{ height: 56px!important; }
     .second-row{
@@ -27,7 +26,7 @@
         
           <app-optimistic-loading-spinner></app-optimistic-loading-spinner>
         
-          <button mat-button appAddToHomeScreen>Legg til app</button>
+          <button mat-stroked-button appAddToHomeScreen>Legg til app</button>
 
           <button mat-icon-button routerLink="/profil">
             <mat-icon>person</mat-icon>
