update content bg colors

--- a/projects/kbtv-client/src/app/home/home.component.scss
+++ b/projects/kbtv-client/src/app/home/home.component.scss
@@ -12,7 +12,7 @@ app-home-mission-card{
 }
 
 .main-container{
-    background: mat-color($background, background);
+    background: mat-color($background, disabled-button-toggle);
     height:100%;
     width:100%;  
     overflow:hidden;
