--- a/projects/kbtv-client/src/app/layout/main-nav/main-side-nav/main-side-nav.component.html
+++ b/projects/kbtv-client/src/app/layout/main-nav/main-side-nav/main-side-nav.component.html
@@ -6,6 +6,7 @@
     place-content: stretch center;
     align-items: stretch;
     max-width: 100%;
+    background: transparent;
   }
 </style>
 <mat-toolbar class="mb-4 mt-4">
