--- a/projects/kbtv-client/src/app/shared/components/main-skeleton/main-skeleton.component.scss
+++ b/projects/kbtv-client/src/app/shared/components/main-skeleton/main-skeleton.component.scss
@@ -10,7 +10,7 @@
     z-index:1;
     height:100%;
     width:100%;
-    background: mat-color($background, app-bar);
+    background: mat-color($background, status-bar);
     flex-direction: row;
 }
 
