add mat divider to bottom of list

--- a/projects/kbtv-client/src/app/home/home-mission-card/home-mission-card.component.html
+++ b/projects/kbtv-client/src/app/home/home-mission-card/home-mission-card.component.html
@@ -15,7 +15,9 @@
       </app-list-item>
 
     </div>
-
+    
+    <mat-divider class="ml-3 mr-3" style="height:8px"></mat-divider>
+    
     <ng-template #noContent>
       <div class="m-4">Finner ingen oppdrag</div>
     </ng-template>
