--- a/projects/kbtv-client/src/app/home/home-mission-card/home-mission-card.component.scss
+++ b/projects/kbtv-client/src/app/home/home-mission-card/home-mission-card.component.scss
@@ -16,5 +16,7 @@
 .mission-list{
     overflow-y:scroll;
     overflow-x:hidden;
-    width:100%;
+    width:100%; 
+    height:90%;
+    flex: 1 1 1e-09px;
 }
