--- a/projects/kbtv-client/src/app/home/home.component.scss
+++ b/projects/kbtv-client/src/app/home/home.component.scss
@@ -22,7 +22,7 @@ app-home-mission-card{
     color:$accent;
     transform:translateY(-50px);
     margin-bottom: -50px;
-    padding: 8px 8px 0 8px;
+    padding: 12px 12px 4px 12px;
     flex: 1 1 1e-09px;
     overflow:hidden;
 }
