--- a/projects/kbtv-client/src/app/home/home-mission-card/home-mission-card.component.scss
+++ b/projects/kbtv-client/src/app/home/home-mission-card/home-mission-card.component.scss
@@ -9,9 +9,9 @@
 
 .mission-card{
     height:100%;
-    margin-bottom: $gap-size * 3px;
     background-color:mat-color($background, card);
     border-radius: 4px;
+    margin: 12px 12px 0 12px;
 } 
 .mission-list{
     overflow-y:scroll;
