--- a/projects/kbtv-client/src/app/home/home-mission-card/home-mission-card.component.scss
+++ b/projects/kbtv-client/src/app/home/home-mission-card/home-mission-card.component.scss
@@ -11,7 +11,7 @@
     height:100%;
     background-color:mat-color($background, card);
     border-radius: 4px;
-    margin: 12px 12px 0 12px;
+    margin: 0 12px;
 } 
 .mission-list{
     overflow-y:scroll;
