--- a/projects/kbtv-client/src/app/feature-modules/timesheet-modules/timesheet-statistic/timesheet-statistic/timesheet-statistic.component.html
+++ b/projects/kbtv-client/src/app/feature-modules/timesheet-modules/timesheet-statistic/timesheet-statistic/timesheet-statistic.component.html
@@ -1,6 +1,6 @@
 <app-main-skeleton contentWrapperClass="bottom-bar-padding" *ngIf="vm$ | async; let vm">
 
-    <ng-container navbar *ngIf="vm$ | async; let navVm">
+    <ng-container navbar>
         <app-main-top-nav-bar [config]="navConfig" >
         </app-main-top-nav-bar>
         <app-chips-bar [chips]="vm.groupByChips">
@@ -14,7 +14,7 @@
         [overlayNoRowsTemplate]="vm.noRowsText">
     </app-timesheet-statistic-table>
     
-    <app-bottom-action-bar bottombar [actions]="bottomActions">
+    <app-bottom-action-bar bottombar [actions]="vm.bottomActions">
     </app-bottom-action-bar>
 
 </app-main-skeleton>
