--- a/projects/kbtv-client/src/app/feature-modules/data-management/data-manager/data-manager.component.html
+++ b/projects/kbtv-client/src/app/feature-modules/data-management/data-manager/data-manager.component.html
@@ -18,7 +18,7 @@
     agGridTheme="ag-theme-balham">
   </lib-model-data-table>
 
-  <app-bottom-action-bar bottombar [actions]="vm.bottomActions">
+  <app-bottom-action-bar bottombar [actions]="vm.bottomActions" alwaysDisplayBar=true>
   </app-bottom-action-bar>
 
 </app-main-skeleton>
