--- a/projects/kbtv-client/src/app/shared/components/bottom-action-bar/bottom-action-bar.component.scss
+++ b/projects/kbtv-client/src/app/shared/components/bottom-action-bar/bottom-action-bar.component.scss
@@ -48,7 +48,7 @@
     flex-direction: row;
     box-sizing: border-box;
     display: flex;
-    place-content: center space-around;
+    place-content: center flex-end;
     align-items: center;
 }
 
